<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="#0099cc"
    tools:context=".Accueil"
    android:orientation="vertical"
    android:id="@+id/rlMain">

    <com.charlesmass.justpopit.TVAgentOrange
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title"
        android:id="@+id/tvTitle"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bNew"
        android:src="@drawable/bclassic"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:background="#00000000" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bRush"
        android:layout_centerHorizontal="true"
        android:src="@drawable/brush"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="#00000000" />

    <com.charlesmass.justpopit.TVAgentOrange
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/tv_easy"
        android:id="@+id/tvDifficulty"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:textColor="#eeeeee" />

    <com.charlesmass.justpopit.TVAgentOrange
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/tvScores"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />

    <com.charlesmass.justpopit.TVAgentOrange
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/tvScoresRush"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infos_rules"
        android:id="@+id/tvInfoRules"
        android:textSize="17sp"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infos_appli"
        android:id="@+id/tvInfos"
        android:textSize="17sp"
        android:visibility="invisible"
        android:autoLink="web" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ban"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banniere_accueil"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_info"
        android:id="@+id/bInfo"
        android:layout_above="@+id/ban"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#44000000" />

</RelativeLayout>
