<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond"
    android:id="@+id/rlMain">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_score_vide"
        android:textStyle="bold"
        android:id="@+id/tvNbPops"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#C40909" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_record_vide"
        android:textStyle="bold"
        android:id="@+id/tvHighScore"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#C40909" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_pause"
        android:textStyle="bold"
        android:id="@+id/tvPourLaPause"
        android:textColor="#C40909"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ibPauseClassic"
        android:background="@drawable/pause_classic"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/tv_pause"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/llVies"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivFirstHeart"
            android:background="@drawable/coeur_mini"
            android:contentDescription="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivSecondHeart"
            android:background="@drawable/coeur_mini"
            android:contentDescription="2"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivThirdHeart"
            android:background="@drawable/coeur_mini"
            android:contentDescription="3"/>
    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/son_off_mini"
        android:id="@+id/ibSound"
        android:layout_below="@+id/tvPourLaPause"
        android:layout_centerHorizontal="true" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ban"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banniere_vue_fin"
        android:visibility="invisible" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/banbelowtop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7906787048036179/6679934640"
        android:layout_below="@+id/ban"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/banabovebottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7906787048036179/8156667847"
        android:layout_above="@+id/banBas"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/banBas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banniere_vue_fin_bas"
        android:layout_alignParentBottom="true"
        android:visibility="invisible" />

</RelativeLayout>